// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom Pipe Default 1`] = `
<storybook-storyshot-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-name>
    <h1>
      CustomPipe: foobar
    </h1>
  </storybook-name>
</storybook-storyshot-root>
`;

exports[`Storyshots Custom Pipe/With Knobs NameComponent 1`] = `
<storybook-storyshot-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-name>
    <h1>
      CustomPipe: foobar
    </h1>
  </storybook-name>
</storybook-storyshot-root>
`;

exports[`Storyshots Custom ngModule metadata simple 1`] = `
<storybook-storyshot-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-simple-service-component>
    
      
    <p>
      Static name:
    </p>
    
      
    <ul>
      
        
      
      
      
    </ul>
    
    
  </storybook-simple-service-component>
</storybook-storyshot-root>
`;

exports[`Storyshots Custom ngModule metadata with knobs 1`] = `
<storybook-storyshot-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <storybook-simple-service-component>
    
      
    <p>
      Dynamic knob:
    </p>
    
      
    <ul>
      
        
      
      
      
    </ul>
    
    
  </storybook-simple-service-component>
</storybook-storyshot-root>
`;
